--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,26 @@
 @import url(../vendor/normalize.css);
 
 @import url(../vendor/fonts.css);
+
+
+
+/* body */
+@import url(../blocks/body/body.css);
+
+
+/* header */
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__line/header__line.css);
+
+
+/* profile */
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__items/profile__items.css);
+@import url(../blocks/profile/__person/profile__person.css);
+@import url(../blocks/profile/__edit-button/profile__edit-button.css);
+@import url(../blocks/profile/__button/profile__button.css);
+@import url(../blocks/profile/__title/profile__title.css);
+@import url(../blocks/profile/__subtitle/profile__subtitle.css);
