--- a/styles/style.css
+++ b/styles/style.css
@@ -1,109 +1,78 @@
-.body {
-  background-color: #000000;
-  font-family: 'Inter';
-  font-style: normal;
+.elements {
+  max-width: calc(100% - 400px);
+  margin: 46.25px auto 0;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 17px;
 }
 
-.header {
-  max-width: calc(100% - 400px);
-  margin: 45px auto 0;
+.element {
+  border-radius: 10px;
+  background-color: white;
+  width: 282px;
+  height: 361px;
+  overflow: hidden;
+
+
   display: flex;
   flex-direction: column;
-  gap: 41px;
+}
+
+.element__photo {
+  width: 282px;
+  height: 282px;
+
 
 }
 
-.header__logo {
-  background-image: url(../vendor/header-logo.png);
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 142px;
-  height: 33px;
-}
-
-.header__line {
-  width: 100%;
-  height: 0px;
-  background-color: #545454;
-  border: #545454 solid 1px;
-
-}
-
-.profile {
-  max-width: calc(100% - 400px);
-  margin: 40px auto 0;
+.element__text {
+  margin: 25px auto 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  width: 246px;
+  height: 23px;
 }
 
-.profile__avatar {
-  background-image: url(../vendor/avatar.jpg);
+.element__like {
+  background-image: url(../vendor/LikeButton.svg);
   background-size: cover;
   background-repeat: no-repeat;
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
-
+  width: 22px;
+  height: 19px;
+  margin-right: 5px;
 }
 
-.profile__info {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-}
-.profile__items {
-  display: flex;
-  flex-direction: row;
-  gap: 18px;
-
-}
-
-.profile__person {
-  display: flex;
-  flex-direction: row;
-  gap: 30px;
-}
-
-.profile__edit-button {
-  margin: 0;
-  margin-top: 15px;
-
-  background-image: url(../vendor/Vector.png);
-  background-size: 10px 10px;
-  background-position: center center;
-  background-repeat: no-repeat;
-  width: 24px;
-  height: 24px;
-  border: white solid 1px;
-}
-
-.profile__button {
-
-  background-image: url(../vendor/AddButton.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 150px;
-  height: 50px;
-  margin-top: 35px;
-}
-
-.profile__title {
-  color: white;
-  font-weight: 500;
-  font-size: 42px;
-  line-height: 48px;
-  margin: 0;
+.element__title {
+  text-overflow: ellipsis;
   white-space: nowrap;
+  overflow: hidden;
+  margin: 0;
+  max-width: 200px;
 
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 29px;
 
+  color: #000000;
 }
-.profile__subtitle {
-  color: white;
+
+
+.footer {
+  max-width: calc(100% - 400px);
+  margin: 66px auto 0;
+  display: flex;
+  flex-direction: row;
+}
+
+.footer__text {
+  font-family: 'Inter';
+  font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  margin: 0;
 
+  color: #545454;
 }
