--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,36 +1,33 @@
-.header {
+.elements {
   max-width: calc(100% - 400px);
-  margin: 45px auto 0;
-  display: flex;
-  flex-direction: column;
-  gap: 41px;
-
+  margin: 46.25px auto 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
+  gap: 20px 17px;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .header {
+  .elements {
     max-width: calc(100% - 400px);
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  .header {
+  .elements {
     max-width: calc(100% - 164px);
 
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
-  .header {
-    max-width: 100%;
-    gap: 31.6px;
-    margin-top: 28px;
+  .elements {
+    max-width: calc(100% - 38px);
+
   }
 }
 
 @media screen and (min-width: 1280px){
-  .header {
+  .elements {
     max-width: 880px;
   }
 }
-
