--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,36 +1,33 @@
-.header {
+.footer {
   max-width: calc(100% - 400px);
-  margin: 45px auto 0;
+  margin: 66px auto 0;
   display: flex;
-  flex-direction: column;
-  gap: 41px;
-
+  flex-direction: row;
 }
 
+
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .header {
+  .footer {
     max-width: calc(100% - 400px);
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  .header {
+  .footer {
     max-width: calc(100% - 164px);
-
+    margin-top: 88px;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
-  .header {
-    max-width: 100%;
-    gap: 31.6px;
-    margin-top: 28px;
+  .footer {
+    max-width: calc(100% - 38px);
+    margin-top: 64px;
   }
 }
 
 @media screen and (min-width: 1280px){
-  .header {
+  .footer {
     max-width: 880px;
   }
 }
-
