--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -7,3 +7,9 @@
   border-radius: 50%;
 
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .profile__avatar {
+    margin: 0 auto 0;
+  }
+}
