--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -10,3 +10,12 @@
   height: 24px;
   border: white solid 1px;
 }
+
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
+    margin-top: 7px;
+  }
+}
