--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -3,3 +3,9 @@
   flex-direction: column;
   gap: 16px;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .profile__info {
+    gap: 14px;
+  }
+}
