--- a/blocks/profile/__items/profile__items.css
+++ b/blocks/profile/__items/profile__items.css
@@ -3,3 +3,9 @@
   flex-direction: row;
   gap: 18px;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .profile__items {
+    gap: 10px;
+  }
+}
