--- a/blocks/profile/__person/profile__person.css
+++ b/blocks/profile/__person/profile__person.css
@@ -3,3 +3,12 @@
   flex-direction: row;
   gap: 30px;
 }
+
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .profile__person {
+    flex-direction: column;
+    gap: 22.25px;
+    margin: 0 auto 0;
+  }
+}
