--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -5,3 +5,33 @@
   flex-direction: row;
   justify-content: space-between;
 }
+
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .profile {
+    max-width: calc(100% - 400px);
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .profile {
+    max-width: calc(100% - 164px);
+
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .profile {
+    max-width: calc(100% - 38px);
+
+    flex-direction: column;
+    gap: 36px;
+    justify-content: start;
+  }
+}
+
+@media screen and (min-width: 1280px){
+  .profile {
+    max-width: 880px;
+  }
+}
