--- a/pages/index.css
+++ b/pages/index.css
@@ -24,3 +24,18 @@
 @import url(../blocks/profile/__button/profile__button.css);
 @import url(../blocks/profile/__title/profile__title.css);
 @import url(../blocks/profile/__subtitle/profile__subtitle.css);
+
+
+/* elements */
+@import url(../blocks/elements/elements.css);
+
+/* element */
+@import url(../blocks/element/element.css);
+@import url(../blocks/element/__photo/element__photo.css);
+@import url(../blocks/element/__text/element__text.css);
+@import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__title/element__title.css);
+
+/* footer */
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__text/footer__text.css);
