--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -9,8 +9,12 @@
   width: 24px;
   height: 24px;
   border: white solid 1px;
+  background-color: black;
 }
 
+.profile__edit-button:hover {
+  opacity: 0.8;
+}
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .profile__edit-button {
