--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,5 +1,5 @@
 .header__logo {
-  background-image: url(../../../vendor/header-logo.png);
+  background-image: url(../../../images/header-logo.png);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
