--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,5 +1,5 @@
 .profile__avatar {
-  background-image: url(../../../vendor/avatar.jpg);
+  background-image: url(../../../images/avatar.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   width: 120px;
