--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -1,5 +1,5 @@
 .profile__button {
-  background-image: url(../../../vendor/AddButton.png);
+  background-image: url(../../../images/AddButton.png);
   background-size: cover;
   background-repeat: no-repeat;
   width: 150px;
@@ -10,12 +10,12 @@
 }
 
 .profile__button:hover {
-  opacity: 0.8;
+  opacity: 0.6;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .profile__button {
-    background-image: url(../../../vendor/AddButton__Mobile.png);
+    background-image: url(../../../images/AddButton__Mobile.png);
     width: 282px;
     height: 50px;
     margin: 0 auto 0;
