--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -2,7 +2,7 @@
   margin: 0;
   margin-top: 15px;
 
-  background-image: url(../../../vendor/Vector.png);
+  background-image: url(../../../images/Vector.png);
   background-size: 10px 10px;
   background-position: center center;
   background-repeat: no-repeat;
