--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -5,6 +5,11 @@
   line-height: 22px;
   margin: 0;
 
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 294px;
+
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
