--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -6,4 +6,11 @@
   width: 142px;
   height: 33px;
   margin-left: 27px;
+  margin-bottom: 41px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .header__logo {
+    margin-bottom: 31.6px;
+  }
 }
