--- a/blocks/popup/__close-icon/popup__close-icon.css
+++ b/blocks/popup/__close-icon/popup__close-icon.css
@@ -2,7 +2,7 @@
   position: absolute;
   top: -40px;
   right: -40px;
-  background-image: url(../../../vendor/Close\ Icon.png);
+  background-image: url(../../../images/Close\ Icon.png);
   border: none;
   background-color: transparent;
 
