--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,16 +1,9 @@
 .popup__form {
   margin: 0 auto 0;
-  width: 33.59%;
-  background-color: white;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  border-radius: 10px;
-  position: relative;
+  gap: 0;
 }
 
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .popup__form {
-    width: 88.125%;
-  }
-}
