--- a/blocks/popup/__input/_type/popup__input_type_name.css
+++ b/blocks/popup/__input/_type/popup__input_type_name.css
@@ -1,10 +1,4 @@
 .popup__input_type_name {
-  margin: 54px auto 0;
+  margin: 0 auto 0;
 }
 
-
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .popup__input_type_name {
-    margin-top: 75px;
-  }
-}
