--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -1,5 +1,5 @@
 .body {
   background-color: #000000;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   font-style: normal;
 }
