--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -10,9 +10,13 @@
 
   margin-right: 5px;
   margin-top: 5px;
-  margin-bottom: -1px;
+  margin-top: 1px;
+
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 .element__like:hover {
-  opacity: 0.6;
+  opacity: 0.5;
 }
