--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -6,20 +6,20 @@
   gap: 20px 17px;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 1279px) {
   .elements {
     max-width: calc(100% - 400px);
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .elements {
     max-width: calc(100% - 164px);
 
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .elements {
     max-width: calc(100% - 38px);
 
