--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,20 +6,20 @@
 }
 
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 1279px) {
   .footer {
     max-width: calc(100% - 400px);
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .footer {
     max-width: calc(100% - 164px);
     margin-top: 88px;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .footer {
     max-width: calc(100% - 38px);
     margin-top: 64px;
