--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,5 +1,5 @@
 .header__logo {
-  background-image: url(../../../images/header-logo.png);
+  background-image: url(../../../images/logo.svg);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -9,8 +9,10 @@
   margin-bottom: 41px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .header__logo {
+    width: 103.74px;
+    height: 24.4px;
     margin-bottom: 31.6px;
   }
 }
