--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,24 +4,24 @@
   display: flex;
   flex-direction: column;
   gap: 41px;
-  border-bottom: #545454 solid 1px;
+  border-bottom: rgba(84, 84, 84, 0.7) solid 1px;
 
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 1279px) {
   .header {
     max-width: calc(100% - 400px);
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .header {
     max-width: calc(100% - 164px);
 
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .header {
     max-width: 100%;
     gap: 31.6px;
