--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -7,6 +7,7 @@
   gap: 54px;
   border-radius: 10px;
   position: relative;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
