--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -9,11 +9,15 @@
 
   width: 83.25%;
   border: none;
-  border-bottom: 1px solid #000000;
-  margin-bottom: 13px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  margin: 0 auto 0;
 }
 
 
 .popup__input::placeholder {
   color: #d3d3d3;
+}
+
+.popup__input:nth-of-type(2) {
+  margin-top: 30px;
 }
