--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -2,8 +2,9 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, .3);
+  background-color: rgba(0, 0, 0, .5);
   top: 0px;
+  left: 0px;
   display: none;
 }
 
