--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -1,23 +1,27 @@
 .profile__button {
-  background-image: url(../../../images/AddButton.png);
-  background-size: cover;
+  background-image: url(../../../images/AddButton.svg);
+  background-size: 14.66666% 44%;
+  background-position: center center;
   background-repeat: no-repeat;
   width: 150px;
   height: 50px;
   margin-top: 35px;
-  background-color: black;
-  border: none;
+  background-color: transparent;
+
+  border: 2px solid #FFFFFF;
+  border-radius: 2px;
+  cursor: pointer;
 }
 
 .profile__button:hover {
   opacity: 0.6;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .profile__button {
-    background-image: url(../../../images/AddButton__Mobile.png);
     width: 282px;
     height: 50px;
     margin: 0 auto 0;
+    background-size: 5.673759% 32%;
   }
 }
