--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -2,22 +2,24 @@
   margin: 0;
   margin-top: 15px;
 
-  background-image: url(../../../images/Vector.png);
+  background-image: url(../../../images/EditButton.svg);
   background-size: 10px 10px;
   background-position: center center;
   background-repeat: no-repeat;
   width: 24px;
   height: 24px;
   border: white solid 1px;
-  background-color: black;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 .profile__edit-button:hover {
-  opacity: 0.8;
+  opacity: 0.6;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .profile__edit-button {
+    background-size: 7.5px 7.5px;
     width: 18px;
     height: 18px;
     margin-top: 7px;
