--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -14,11 +14,10 @@
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .profile__subtitle {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
+
     font-size: 14px;
     line-height: 17px;
     text-align: center;
+    max-width: 189px;
   }
 }
