--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -15,11 +15,9 @@
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .profile__title {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 500;
     line-height: 33px;
     font-size: 27px;
     text-align: center;
+    max-width: 189px;
   }
 }
