--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -5,7 +5,7 @@
   margin: 0;
   max-width: 200px;
 
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
