--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,6 +1,6 @@
 .elements {
-  max-width: calc(100% - 400px);
-  margin: 46.25px auto 0;
+  max-width: 880px;
+  margin: 50px auto 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
   gap: 20px 17px;
@@ -22,12 +22,7 @@
 @media screen and (max-width: 767px) {
   .elements {
     max-width: calc(100% - 38px);
+    margin-top: 48px;
 
-  }
-}
-
-@media screen and (min-width: 1280px){
-  .elements {
-    max-width: 880px;
   }
 }
