--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,5 +1,5 @@
 .popup__form {
-  margin: 54px auto 0;
+  margin: 0 auto 0;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -7,3 +7,8 @@
 }
 
 
+@media screen and (max-width: 767px) {
+  .popup__form {
+    margin-top: 0;
+  }
+}
