--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -4,7 +4,7 @@
   margin: 48px auto 37px;
   background-color: #000000;
 
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -15,6 +15,7 @@
 
   border: none;
   border-radius: 2px;
+  cursor: pointer;
 }
 
 
@@ -26,5 +27,9 @@
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .popup__save-button {
     margin: 45px auto 25px;
+    height: 46px;
+
+    font-size: 14px;
+    line-height: 17px;
   }
 }
