--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  margin-top: 22px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
