--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -14,10 +14,10 @@
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .profile__subtitle {
+    margin: 0 auto 0;
 
     font-size: 14px;
     line-height: 17px;
-    text-align: center;
     max-width: 189px;
   }
 }
