--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -22,7 +22,7 @@
 @media screen and (max-width: 767px) {
   .footer {
     max-width: calc(100% - 38px);
-    margin-top: 64px;
+    margin: 48px auto 36px;
   }
 }
 
