--- a/blocks/profile/__person/profile__person.css
+++ b/blocks/profile/__person/profile__person.css
@@ -8,7 +8,7 @@
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .profile__person {
     flex-direction: column;
-    gap: 22.25px;
+    gap: 0;
     margin: 0 auto 0;
   }
 }
