исправлена ширина контейнера в попапе

--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,6 +1,6 @@
 .popup__container {
   margin: 0 auto 0;
-  width: 33.59%;
+  width: 430px;
   background-color: white;
   display: flex;
   flex-direction: column;
